<resources>
    <string name="app_name">RPNCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="multiply">Multiply</string>
    <string name="divide_sign">÷</string>
    <string name="multiply_sign">✕</string>
    <string name="long_minus_sign">−</string>
    <string name="square_root_sign">√</string>
    <string name="enter_sign">⏎</string>
    <string name="backspace_sign">⇐</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_value_precision">Results precision</string>
    <string name="pref_default_value_precision">Unlimited</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_rounding_mode">Rounding mode</string>
    <string-array name="pref_titles_rounding_mode">
        <item>Up</item>
        <item>Down</item>
        <item>Ceiling</item>
        <item>Floor</item>
        <item>Half up</item>
        <item>Half down</item>
        <item>Half even</item>
    </string-array>
    <string-array name="pref_values_rounding_mode">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
