<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.witkups.rpncalculator.CalculatorActivity"
    tools:showIn="@layout/activity_calculator">

    <GridLayout
        android:id="@+id/operationsLayout"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/numbersLayout">

        <Button
            android:id="@+id/buttonSqrt"
            android:layout_width="@dimen/number_button_size"
            android:layout_height="@dimen/number_button_size"
            android:layout_column="4"
            android:layout_row="1"
            android:text="@string/square_root_sign"
            tools:layout_editor_absoluteX="405dp"
            tools:layout_editor_absoluteY="0dp" />

        <Button
            android:id="@+id/buttonMul"
            android:layout_width="@dimen/number_button_size"
            android:layout_height="@dimen/number_button_size"
            android:layout_column="3"
            android:layout_row="2"
            android:text="@string/multiply_sign" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="@dimen/number_button_size"
            android:layout_height="@dimen/number_button_size"
            android:layout_column="3"
            android:layout_row="3"
            android:text="+" />

        <Button
            android:id="@+id/buttonEnter"
            android:layout_width="@dimen/number_button_size"
            android:layout_height="@dimen/number_button_size"
            android:layout_column="3"
            android:layout_row="4"
            android:text="\u23CE" />

        <Button
            android:id="@+id/buttonExp"
            android:layout_width="@dimen/number_button_size"
            android:layout_height="@dimen/number_button_size"
            android:layout_column="3"
            android:layout_row="1"
            android:text="EXP" />

        <Button
            android:id="@+id/buttonDiv"
            android:layout_width="@dimen/number_button_size"
            android:layout_height="@dimen/number_button_size"
            android:layout_column="4"
            android:layout_row="2"
            android:text="@string/divide_sign" />

        <Button
            android:id="@+id/buttonSub"
            android:layout_width="@dimen/number_button_size"
            android:layout_height="@dimen/number_button_size"
            android:layout_column="4"
            android:layout_row="3"
            android:text="@string/long_minus_sign" />

    </GridLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="205dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/actionsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/numbersLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/operationsLayout"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/button7"
            android:layout_width="@dimen/number_button_size"
            android:layout_height="@dimen/number_button_size"
            android:layout_column="0"
            android:layout_row="1"
            android:text="7" />

        <Button
            android:id="@+id/button8"
            android:layout_width="@dimen/number_button_size"
            android:layout_height="@dimen/number_button_size"
            android:layout_column="1"
            android:layout_row="1"
            android:text="8" />

        <Button
            android:id="@+id/button9"
            android:layout_width="@dimen/number_button_size"
            android:layout_height="@dimen/number_button_size"
            android:layout_column="2"
            android:layout_row="1"
            android:text="9" />

        <Button
            android:id="@+id/button4"
            android:layout_width="@dimen/number_button_size"
            android:layout_height="@dimen/number_button_size"
            android:layout_column="0"
            android:layout_row="2"
            android:text="4" />

        <Button
            android:id="@+id/button5"
            android:layout_width="@dimen/number_button_size"
            android:layout_height="@dimen/number_button_size"
            android:layout_column="1"
            android:layout_row="2"
            android:text="5" />

        <Button
            android:id="@+id/button6"
            android:layout_width="@dimen/number_button_size"
            android:layout_height="@dimen/number_button_size"
            android:layout_column="2"
            android:layout_row="2"
            android:text="6" />


        <Button
            android:id="@+id/button1"
            android:layout_width="@dimen/number_button_size"
            android:layout_height="@dimen/number_button_size"
            android:layout_column="0"
            android:layout_row="3"
            android:text="1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="@dimen/number_button_size"
            android:layout_height="@dimen/number_button_size"
            android:layout_column="1"
            android:layout_row="3"
            android:text="2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="@dimen/number_button_size"
            android:layout_height="@dimen/number_button_size"
            android:layout_column="2"
            android:layout_row="3"
            android:text="3" />


        <Button
            android:id="@+id/button0"
            android:layout_width="@dimen/number_button_size"
            android:layout_height="@dimen/number_button_size"
            android:layout_column="0"
            android:layout_row="4"
            android:text="0" />

        <Button
            android:id="@+id/buttonSign"
            android:layout_width="@dimen/number_button_size"
            android:layout_height="@dimen/number_button_size"
            android:layout_column="1"
            android:layout_row="4"
            android:text="+/-" />

        <Button
            android:id="@+id/buttonDecimal"
            android:layout_width="@dimen/number_button_size"
            android:layout_height="@dimen/number_button_size"
            android:layout_column="2"
            android:layout_row="4"
            android:text="." />


    </GridLayout>

    <LinearLayout
        android:id="@+id/actionsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="200dp"
        app:layout_constraintBottom_toTopOf="@+id/operationsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonUndo"
            android:layout_height="@dimen/upper_button_height"
            android:text="↶"
            android:layout_weight="1"
            android:layout_width="0dp" />

        <Button
            android:id="@+id/buttonSwap"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="@dimen/upper_button_height"
            android:text="↹" />

        <Button
            android:id="@+id/buttonDrop"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="@dimen/upper_button_height"
            android:text="DROP" />

        <Button
            android:id="@+id/buttonAC"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="@dimen/upper_button_height"
            android:text="AC" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
